# OtoConnect

./: .gitignore  LICENSE.md  README.md  anki_client.py  anki_utils.py  config_manager.py  config_utils.py  config_wizard.py  database_manager.py  database_menu.py  input_handler.py  main.py  pyproject.toml
src/otoconnect/: constants.py
src/otoconnect/anki/: client.py  utils.py
src/otoconnect/cli/: input_handler.py  main.py
src/otoconnect/cli/menus/: database.py
src/otoconnect/cli/wizards/: config.py
src/otoconnect/configuration/: __init__.py  manager.py
src/otoconnect/database/: __init__.py  manager.py
src/otoconnect/monitor/: file_monitor.py
